# sgp40-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md
.github/workflows/: rust.yml
example/: main.rs
examples/: main.rs
examples/nrf52-example/: Cargo.toml
examples/nrf52-example/.cargo/: config
examples/nrf52-example/src/: main.rs
src/: lib.rs  test_vocalg.rs  vocalg.rs
