[package]
name = "sgp40-nrf52-example"
version = "0.1.0"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
rtt-target = {version = "0.2.0", features = ["cortex-m"] }
nrf52840-hal = "*"
arrayvec = {version = "0.5.2", default-features = false }
crc_all = "0.2.0"
sgp40 = { path = "../../", default-features = false }

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]
